# neuro-code

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/api/: __init__.py  dependencies.py  main.py
backend/api/routes/: __init__.py  graph.py  search.py  websocket.py
backend/graph_db/: __init__.py  neo4j_client.py  queries.py  schema.py
backend/merkle/: __init__.py  change_detector.py  hash_calculator.py
backend/parser/: __init__.py  ast_analyzer.py  models.py  project_parser.py  relationship_extractor.py  tree_builder.py  tree_sitter_parser.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_merkle.py  test_parser.py
backend/utils/: __init__.py  config.py  logger.py
backend/watcher/: __init__.py  debouncer.py  file_watcher.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Breadcrumbs.tsx  ControlPanel.tsx  FlowGraph.tsx  GraphCanvas.tsx  NodeInfoPanel.tsx  SearchBar.tsx  ThemeToggle.tsx  TreeGraph.tsx
frontend/src/components/edges/: TypedEdge.tsx  index.ts
frontend/src/components/nodes/: CircleNode.tsx  index.ts
frontend/src/hooks/: index.ts  useDebounce.ts  useGraphData.ts  useGraphNavigation.ts  useKeyboardShortcuts.ts  useWebSocket.ts
frontend/src/services/: api.ts  cache.ts
frontend/src/stores/: graphStore.ts  themeStore.ts  treeStore.test.ts  treeStore.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: graph.types.ts
frontend/src/utils/: colorScheme.ts  layoutEngine.ts
scripts/: benchmark.py  init_database.py  parse_codebase.py  parse_deep.py
